--- a/css/index.css
+++ b/css/index.css
@@ -102,3 +102,13 @@ img {
 .pneu{
     margin-top: 62px;
 }
+.btn-outline-success {
+    color: #fff !important;
+    border-color: #fff !important;
+}
+.btn-outline-success:hover {
+    background-color: #fff !important;
+    color: #002147 !important;
+}
+  
+  
