--- a/css/infantil.css
+++ b/css/infantil.css
@@ -47,7 +47,26 @@ a{
 }
 .image{
     justify-content: center;
+    gap: 4px;
 }
 .dropdown-item{
     color: #002147 !important;
+}
+.card:hover {
+    transform: scale(1.05);
+    border: 2px solid #146bce;
+    border-radius: 10px;
+}
+.btn-outline-success {
+    color: #fff !important;
+    border-color: #fff !important;
+}
+.btn-outline-success:hover {
+    background-color: #fff !important;
+    color: #002147 !important;
+}
+.text{
+    color: #002147;
+    font-family: inika;
+    font-weight: bold;
 }
