--- a/css/oferta.css
+++ b/css/oferta.css
@@ -46,3 +46,32 @@ a{
 .segura{
     height: 168px;
 }
+.card:hover {
+    transform: scale(1.05);
+    border: 2px solid #146bce;
+    border-radius: 10px;
+}
+.btn-outline-success {
+    color: #fff !important;
+    border-color: #fff !important;
+}
+.btn-outline-success:hover {
+    background-color: #fff !important;
+    color: #002147 !important;
+}
+.text{
+    color: #002147;
+    font-family: inika;
+    font-weight: bold;
+}
+.antigo{
+    color: red;
+    font-family: Arial;
+    text-decoration: line-through;
+    font-size: 15px;
+}
+.valor{
+    color: #002147;
+    font-size: 17px;
+    font-weight: bold;
+}
