--- a/css/feminino.css
+++ b/css/feminino.css
@@ -13,10 +13,6 @@
     justify-content: center;
 }
 
-.card {
-    border: 1px solid black;
-}
-
 .card-img-top {
     height: 200px;
 }
@@ -47,7 +43,31 @@ a{
 }
 .image{
     justify-content: center;
+    gap: 4px;
 }
 .dropdown-item{
     color: #002147 !important;
+}
+.card:hover {
+    transform: scale(1.05);
+    border: 2px solid #146bce;
+    border-radius: 10px;
+}
+.btn-outline-success {
+    color: #fff !important;
+    border-color: #fff !important;
+}
+.btn-outline-success:hover {
+    background-color: #fff !important;
+    color: #002147 !important;
+}
+.text{
+    color: #002147;
+    font-family: inika;
+    font-weight: bold;
+}
+.text-center{
+    color: #002147;
+    font-family: inika;
+    font-weight: bold;
 }
